# shiqu

./: .gitignore  Cargo.toml
config/: account.toml
src/: api.rs  command.rs  config.rs  db.rs  dialogue.rs  entity.rs  error.rs  functions.rs  http.rs  lib.rs  main.rs
src/api/: gemini.rs
src/entity/: character.rs  conversation.rs  message.rs  user.rs
tests/: bot.rs
