[package]
name = "shiqu"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
http = "1.3"
base64 = "0.22"
time = "0.3"

tokio = { version =  "1.44", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

thiserror = "2.0"

sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "time" ] }
